# BTVNanoCommissioning

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .sites_map.json  BTagMu_DiJet40_Mu5.txt  DY_test.txt  HHWWgg_1File.json  HHWWgg_hgg_coffea_Plotter.ipynb  LICENSE  MANIFEST.in  Prescales_DiJet110.txt  Prescales_PFJet260.txt  README.md  README_HHWWgg.md  Rereco17_doublemu.json  ajson.json  comb.py  comparison.py  correction.py  ctag_AK4.json  ctag_AK4_UL.json  ctag_AK4_mc.json  ctag_AK4_mcsmall.json  ctag_AK4_med.json  ctag_AK4_oldjec.json  ctag_AK4_small.json  ctag_data.json  ctag_datasmall.json  data.json  dataB.json  dataC_done.json  dataD_done.json  dataE_done.json  dataF_done.json  datasets.json  definitions.py  dilep_AK4.json  dilep_AK4_UL.json  dilep_AK4_med.json  (+35 more)
.github/: labeler.yml
DAS_lists/: btag_sf_it.txt
Prescales/: Prescales_PFJet40.txt
condor/: execute.sh  submitter.py
condor_lxplus/: README.md  checkoutputs.py  combinecoffeaoutputs.py  execute.sh  execute_original.sh  haddoutputs.py  submitter.py
data/: #DeepCSV_94XSF_V5_B_F.csv#  #DeepFlavour_94XSF_V4_B_F.csv#  #build_jec.py#  #mv.sh#  DeepCSV_94XSF_V5_B_F.csv  DeepCSV_94XSF_V5_B_F.csv~  DeepCSV_94XSF_V5_B_F_updata.csv  DeepCSV_ctagSF_MiniAOD94X_2017_pTincl_v3_2_interp.root  DeepFlavour_94XSF_V4_B_F.csv  Fall17_17Nov2017DE_V32_DATA_L2L3Residual_AK4PFchs.txt~  build_jec.py  build_jec.py~  compiled_jec.pkl.gzt
docs/: api.rst  auto.md  conf.py  developer.md  index.md  installation.md  requirements.in  requirements.txt  run.md  scaleout.md  scripts.md  sfmodule.md  structure.md  user.md  wf.md
filefetcher/: UL16APVcheck.txt  UL16check.txt  dystudies.json  dystudies.txt  fetch.py  list.txt  samplesUL16.json  samplesUL16APV.json  singlemuon
helpers/: cTagSFReader.py
metaconditions/: Era2017_RR-31Mar2018_v1.json  Era2017_legacy_v1.json  Era2017_legacy_xgb_v1.json
metadata/: 94X_doublemu_PFNano.json  94X_singlemu_PFNano.json  AK4_parameters.py  JetHT.json  MC_Summer22EE_2022_BTV_Run3_2022_Comm_MINIAODv4_NanoV12.json  MC_Summer22EE_2022_qcd_BTV_Run3_2022_Comm_MINIAODv4_NanoV12.json  MC_Summer22EE_Run3_2022_BTV_Comm_v2_NanoV12_noPF.json  MC_Summer22EE_Run3_2022_qcd_BTV_Comm_v2_NanoV12.json  MC_Summer22EE_Run3_2022_qcd_BTV_Comm_v3_NanoV12.json  MC_Summer22EE_Run3_2022_qcdmu_BTV_Comm_v2_NanoV12.json  MC_Summer22_2022_qcdmu_BTV_Run3_2022_Comm_MINIAODv4_NanoV12.json  MC_Summer22_2022_sfl_negtag_DY.json  MC_Summer22_Run3_2022_BTV_Comm_v2_NanoV12_noPF.json  MC_Summer22_Run3_2022_BTV_Comm_v3_NanoV12.json  MC_Summer22_Run3_2022_qcd_BTV_Comm_v2_NanoV12.json  MC_Summer22_Run3_2022_qcdmu_BTV_Comm_v2_NanoV12.json  MC_Summer22_Run3_2022_qcdmu_BTV_Comm_v3_NanoV12.json  MC_Summer23_2023_qcd_BTV_Run3_2023_Comm_MINIAODv4_NanoV12.json  MC_Summer23_2023_qcdmu_BTV_Run3_2023_Comm_MINIAODv4_NanoV12.json  MC_Summer23_Run3_2023_qcd_BTV_Comm_v1_NanoV12.json  MC_Summer23_Run3_2023_qcdmu_BTV_Comm_v1_NanoV12.json  MC_Winter22.json  MC_Winter22_BTV_Run3_2022_Comm_v1.json  QCD_Pt_samples.json  ctag_DY_mu_PFNano.json  data_2023_mu_BTV_Comm_v1_NanoV12.json  data_Summer22EE_2022_em_BTV_Comm_v1_NanoV12.json  data_Summer22EE_2022_em_BTV_Run3_2022_Comm_MINIAODv4_NanoV12.json  data_Summer22EE_2022_jetmet_BTV_Run3_2022_Comm_MINIAODv4_NanoV12.json  data_Summer22EE_2022_mu_BTV_Run3_2022_Comm_MINIAODv4_NanoV12.json  data_Summer22EE_Run3_2022_BTagMu_BTV_Comm_v1_NanoV12.json  data_Summer22EE_Run3_2022_btagmu_BTV_Comm_v2_NanoV12.json  data_Summer22EE_Run3_2022_e_BTV_Comm_v2_NanoV12_noPF.json  data_Summer22_2022_mu_BTV_Comm_v1_NanoV12.json  (+46 more)
(+621 files in other folders)
